--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.6.0",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
