--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.2",
