--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "leaflet": "^1.9.4",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "prisma": "^5.6.0",
@@ -25,13 +26,18 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.0.0",
+    "world-countries": "^5.0.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
