--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet": "^1.9.4",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.7.0",
     "prisma": "^5.6.0",
     "query-string": "^8.1.0",
     "react": "^18",
