--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.0.0",
     "world-countries": "^5.0.0",
     "zustand": "^4.4.6"
